--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -24,14 +24,14 @@
         </i>more
       </button>
       {% if not post.published_date %}
-        <a href="{% url 'post_publish' pk=post.pk %}" class="btn btn-outline-primary mr-2">Publish</a>
+        <a href="{% url 'post_publish' slug=post.slug %}" class="btn btn-outline-primary mr-2">Publish</a>
       {% endif %} 
     </p>
     <div class="collapse" id="collapseExample">
       <div class="card card-body button-card  ">
         
-        <a  href="{% url 'post_edit' pk=post.pk %}" class="btn btn-outline-dark" style="border:none;" ><i class="fa fa-edit" > Edit</i></a>
-        <a href="{% url 'post_delete' pk=post.pk %}" class="btn btn-outline-danger" onclick="return confirm('Are you sure you want to delete this Post ?')" style="border:none;">
+        <a  href="{% url 'post_edit' slug=post.slug %}" class="btn btn-outline-dark" style="border:none;" ><i class="fa fa-edit" > Edit</i></a>
+        <a href="{% url 'post_delete' slug=post.slug %}" class="btn btn-outline-danger" onclick="return confirm('Are you sure you want to delete this Post ?')" style="border:none;">
          <i class="fas fa-trash-alt" > Delete</i>
         </a>
         {% endif %}
@@ -66,7 +66,7 @@
                 {% for author_posts in author_posts %}
                 {% if author_posts.published_date %}
                 <li>
-                  <a class="text-info" href= "{% url 'post_detail' pk=author_posts.pk %}">{{author_posts.title | truncatechars:15}}</a>
+                  <a class="text-info" href= "{% url 'post_detail' slug=author_posts.slug %}">{{author_posts.title | truncatechars:15}}</a>
                 </li>
                 {% endif %}
                 {% endfor %}
@@ -110,13 +110,13 @@
       <h5 class="card-header">leave a comment:</h5>
       {% if user.is_authenticated %}
       <div class="card-body">
-        <form method="post" action="{% url 'add_comment_to_post' pk=post.pk %}">
+        <form method="post" action="{% url 'add_comment_to_post' slug=post.slug %}">
           {% csrf_token %}
           {{ form|crispy }}
           <button type="submit" class="btn btn-primary">Comment</button>
         </form>
         {% else %}
-        <a href="{% url 'add_comment_to_post' pk=post.pk  %}">Login to comment</a>
+        <a href="{% url 'add_comment_to_post' slug=post.slug  %}">Login to comment</a>
       </div>
       {% endif %}
       {% endif %}
@@ -137,8 +137,8 @@
           {% endif %}
           
           {% if not comment.approved and user.is_superuser %}
-            <a href="{% url 'comment_approve' pk=comment.pk %}"> <i class="fas fa-check"> Approve </i></a>
-            <a href="{% url 'comment_remove' pk=comment.pk %}"><i class="fas fa-trash-alt text-danger">   Delete</i></a>
+            <a href="{% url 'comment_approve' slug=comment.slug %}"> <i class="fas fa-check"> Approve </i></a>
+            <a href="{% url 'comment_remove' slug=comment.slug %}"><i class="fas fa-trash-alt text-danger">   Delete</i></a>
           {% endif %}
           <div> {{comment.text | markdown | safe}} </div>
         </div>
