--- a/blog/templates/blog/post_draft_list.html
+++ b/blog/templates/blog/post_draft_list.html
@@ -11,7 +11,7 @@
                     <p>Created : {{ post.created_date }}</p>
                     <p> Published : {{ post.published_date }}</p>
                 </div>
-                <h1> <a href="{% url 'post_detail' pk=post.pk %}"> {{ post.title }} </a> </h1>
+                <h1> <a href="{% url 'post_detail' slug=post.slug %}"> {{ post.title }} </a> </h1>
                 <p> {{ post.text | truncatechars:50}} </p>
             </div>
         {% endfor %}
