--- a/blog/templates/blog/user_posts.html
+++ b/blog/templates/blog/user_posts.html
@@ -30,23 +30,23 @@
                         {% for post in user_posts %} 
                             <tr>
                                 <td>
-                                    <a class="text-decoration-none text-dark" href="{% url 'post_detail' pk=post.pk %}">
+                                    <a class="text-decoration-none text-dark" href="{% url 'post_detail' slug=post.slug %}">
                                         <p>{{ post.title | truncatechars:30 }}</p>
                                     </a>
                                 </td>
                                   
                                 <td>
                                   {% if not post.published_date %}
-                                        <a href="{% url 'post_publish' pk=post.pk %}" class="btn btn-outline-primary mr-2 float-right" style="border:none;">Publish</a>
+                                        <a href="{% url 'post_publish' slug=post.slug %}" class="btn btn-outline-primary mr-2 float-right" style="border:none;">Publish</a>
                                     {% endif %}   
                                 </td>
                                 <td>
-                                    <a  href="{% url 'post_edit' pk=post.pk %}" class="btn btn-outline-dark float-right" style="border:none;" ><i class="fa fa-edit" > Edit</i></a>
+                                    <a  href="{% url 'post_edit' slug=post.slug %}" class="btn btn-outline-dark float-right" style="border:none;" ><i class="fa fa-edit" > Edit</i></a>
                                 </td>
                                 <td>
                                    
                                   
-                                    <a href="{% url 'post_delete' pk=post.pk %}" class="btn btn-outline-danger float-right" onclick="return confirm('Are you sure you want to delete this Post ?')" style="border:none;">
+                                    <a href="{% url 'post_delete' slug=post.slug %}" class="btn btn-outline-danger float-right" onclick="return confirm('Are you sure you want to delete this Post ?')" style="border:none;">
                                         <i class="fas fa-trash-alt" > Delete</i>
                                     </a> 
                                 </td>
