--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,16 +3,16 @@
 {% block title%} My Blog {% endblock%}
 
 {% block mainnav %}
-    {% include "navbar.html" %}
+{% include "navbar.html" %}
 {% endblock %}
 
 {% block content%}
 
 
 <!-- 1st colum in ROW 2 (BLOCK CONTENTS)-->
-<div class="col-xs-12 col-sm-10 col-md-8">
+<div class="col-xs-12 col-sm-10 col-md-10">
   {% include "message.html" %}
- <!--If no posts -->
+  <!--If no posts -->
   {% if not posts %}
   <div class="text-center text-muted my-4">
     <i class="fas fa-sad-tear fa-8x"></i>
@@ -25,7 +25,9 @@
 
 
   <!-- Title -->
-  <a class="text-decoration-none text-dark" href="{% url 'post_detail' pk=post.pk %}"><p class="h4">{{ post.title | truncatechars:30 }}</p></a>
+  <a class="text-decoration-none text-dark" href="{% url 'post_detail' pk=post.pk %}">
+    <p class="h4">{{ post.title | truncatechars:30 }}</p>
+  </a>
 
 
 
@@ -41,13 +43,13 @@
 
   <!-- Post body -->
   <div>
-  <p class="lead" id="post_body" value="{{ post.text}}">
-    {{ post.text |markdown | safe| truncatechars:500| linebreaks }}
+    <p class="lead" id="post_body" value="{{ post.text}}">
+      {{ post.text |markdown | safe| truncatechars:500| linebreaks }}
 
-    {% if post.text|length > 200 %}
-    <a href="{%url 'post_detail' pk=post.pk%}">Continue reading</a>
-  {% endif %}
-  </p>
+      {% if post.text|length > 200 %}
+      <a href="{%url 'post_detail' pk=post.pk%}">Continue reading</a>
+      {% endif %}
+    </p>
   </div>
 
 
@@ -60,11 +62,5 @@
   {% endfor %}
   {% endif %}
 
-</div>
-
-<div class="col-xs-12 col-sm-6 col-md-4 text-center">
-  <i class="fas fa-code"></i>
-  <h3>HTML5</h3>
-  <P>Build with the latest version of HTML</P>
 </div>
 {% endblock %}
