styled the element with custom-file-label properly. its for the image upload

--- a/blog/static/styles/blog.css
+++ b/blog/static/styles/blog.css
@@ -19,11 +19,11 @@ form .alert ul {
 footer {
   bottom: 0;
   width: 100%;
- }           /* Footer height */
+} /* Footer height */
 
- #go-top-button {
+#go-top-button {
   display: inline-block;
-  background-color: #FF9800;
+  background-color: #ff9800;
   width: 50px;
   height: 50px;
   text-align: center;
@@ -31,8 +31,7 @@ footer {
   position: fixed;
   bottom: 30px;
   right: 30px;
-  transition: background-color .3s, 
-    opacity .5s, visibility .5s;
+  transition: background-color 0.3s, opacity 0.5s, visibility 0.5s;
   opacity: 0;
   visibility: hidden;
   z-index: 1000;
@@ -46,7 +45,7 @@ footer {
   font-size: 18px;
   border: none;
   outline: none;
-  background-color:rgb(158, 154, 154);
+  background-color: rgb(158, 154, 154);
   opacity: 0.4;
   color: white;
   cursor: pointer;
@@ -65,5 +64,20 @@ div.scrollable {
 }
 
 div {
-  word-wrap:break-word;
+  word-wrap: break-word;
+}
+.custom-file-label {
+  position: relative;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 1;
+  height: calc(2.25rem + 2px);
+  padding: 0.375rem 0.75rem;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  width: 100%;
 }
