--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -1,26 +1,38 @@
 {% extends 'blog/base.html' %} {% block title%} {{ post.title }} {% endblock%}
-{% load crispy_forms_tags %} 
+{% load crispy_forms_tags %}
 {% block mainnav %}
-  {% include "navbar.html" %}
+{% include "navbar.html" %}
 {% endblock %}
 {% block content%}
 
 
 
 <div class="container mt-4 mb-4">
-    <div class="row justify-content-center">
-      <div class="col-xs-12 col-sm-10 col-md-6  ">
-        <div class="card">
-          <div class="card-body">
-            {% include "message.html" %}
-              <form method="POST" >
-                {% csrf_token %} {{ form|crispy }}
-                <button type="submit" class="btn btn-primary">Save Post</button>
-              </form>
-          </div>
+  <div class="row justify-content-center">
+    <div class="col-xs-12 col-sm-10 col-md-6  ">
+      <div class="card">
+        <div class="card-body">
+          {% include "message.html" %}
+          <form method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <span class="card-text" id="selectedImage"></span>
+            <span class="text-muted" id="selectedImageName"></span><br>
+            <button type="submit" class="btn btn-primary">Save Post</button>
+          </form>
         </div>
       </div>
     </div>
-  </div>  
+  </div>
+</div>
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+    document.getElementById('id_image').addEventListener('change', function () {
+      const fileName = this.files[0].name;
+      document.getElementById('selectedImage').innerText = `Selected image: `;
+      document.getElementById('selectedImageName').innerText = fileName;
+    });
+  });
+</script>
 
 {% endblock %}
