--- a/blog/templates/blog/post_draft_list.html
+++ b/blog/templates/blog/post_draft_list.html
@@ -1,31 +1,33 @@
 {% extends 'blog/base.html' %}
 {% block title%} My Draft Posts {% endblock%}
 {% block mainnav %}
-    {% include "navbar.html" %}
+{% include "navbar.html" %}
 {% endblock %}
-    {% block content%}
-    {% if posts%}
-        {% for post in posts %}
-            <div class="post">
-                <div class="date">
-                    <p>Created : {{ post.created_date }}</p>
-                    <p> Published : {{ post.published_date }}</p>
-                </div>
-                <h1> <a href="{% url 'post_detail' pk=post.pk %}"> {{ post.title }} </a> </h1>
-                <p> {{ post.text | truncatechars:50}} </p>
+{% block content%}
+{% if posts%}
+<div class="col-xs-12 col-sm-10 col-md-10">
+    {% for post in posts %}
+    <div class="post">
+        <div class="date">
+            <p>Created : {{ post.created_date }}</p>
+            <p> Published : {{ post.published_date }}</p>
+        </div>
+        <h1> <a href="{% url 'post_detail' pk=post.pk %}"> {{ post.title }} </a> </h1>
+        <p> {{ post.text | truncatechars:50}} </p>
+    </div>
+    {% endfor %}
+</div>
+{% else %}
+<div class="container mt-4 mb-4">
+    <div class="row justify-content-center">
+        <div class="col-md-5 ">
+            <div class=" text-center text-muted ">
+                <i class="fas fa-sad-tear fa-8x "></i>
+                <h1 class="display-4 ">No drafts</h1>
             </div>
-        {% endfor %}
-         {% else %}
-         <div class="container mt-4 mb-4">
-            <div class="row justify-content-center">
-                <div class="col-md-5 ">
-                    <div class=" text-center text-muted ">
-                        <i class="fas fa-sad-tear fa-8x "></i>
-                        <h1 class="display-4 ">No drafts</h1>
-                    </div>
-                </div>
-                </div>
-                </div>
-  <hr class="my-4">
-    {% endif %}
-    {% endblock %}
+        </div>
+    </div>
+</div>
+<hr class="my-4">
+{% endif %}
+{% endblock %}
