--- a/blog/templates/blog/user_posts.html
+++ b/blog/templates/blog/user_posts.html
@@ -1,83 +1,75 @@
 {% extends 'blog/base.html' %}
 {% load markdownify %}
-{% block title%}  {{post.title}}  {% endblock%}
+{% block title%} {{post.title}} {% endblock%}
 {% load crispy_forms_tags %}
 {% block mainnav %}
-    {% include "navbar.html" %}
+{% include "navbar.html" %}
 {% endblock %}
 
 {% block content%}
 <!--body-->
-<div class="col-xs-12 col-sm-10 col-md-8">
-  {% include "message.html" %}
-  
-  
-    <div class="mt-4 mb-4 " >
+<div class="col-xs-12 col-sm-10 col-md-12">
+    {% include "message.html" %}
+
+
+    <div class="mt-4 mb-4 ">
         {% if user_posts %}
         <h3 class="mt-4 mb-4">{{request.user}} you have {{post_count}} posts</h3>
-        <div >
+        <div>
             <table class="table table-hover table-sm">
-                <thead >
+                <thead>
                     <tr>
                         <th scope="col">post title</th>
                         <th scope="col" colspan="3" class="text-center">Config</th>
                     </tr>
                 </thead>
-                </table>
-               <div  class="scrollable">
-               <table class="table table-hover table-sm">
-                    <tbody >
-                        {% for post in user_posts %} 
-                            <tr>
-                                <td>
-                                    <a class="text-decoration-none text-dark" href="{% url 'post_detail' pk=post.pk %}">
-                                        <p>{{ post.title | truncatechars:30 }}</p>
-                                    </a>
-                                </td>
-                                  
-                                <td>
-                                  {% if not post.published_date %}
-                                        <a href="{% url 'post_publish' pk=post.pk %}" class="btn btn-outline-primary mr-2 float-right" style="border:none;">Publish</a>
-                                    {% endif %}   
-                                </td>
-                                <td>
-                                    <a  href="{% url 'post_edit' pk=post.pk %}" class="btn btn-outline-dark float-right" style="border:none;" ><i class="fa fa-edit" > Edit</i></a>
-                                </td>
-                                <td>
-                                   
-                                  
-                                    <a href="{% url 'post_delete' pk=post.pk %}" class="btn btn-outline-danger float-right" onclick="return confirm('Are you sure you want to delete this Post ?')" style="border:none;">
-                                        <i class="fas fa-trash-alt" > Delete</i>
-                                    </a> 
-                                </td>
-                        
-                            </tr>
-                            {% endfor %}
+            </table>
+            <div class="scrollable">
+                <table class="table table-hover table-sm">
+                    <tbody>
+                        {% for post in user_posts %}
+                        <tr>
+                            <td>
+                                <a class="text-decoration-none text-dark" href="{% url 'post_detail' pk=post.pk %}">
+                                    <p>{{ post.title | truncatechars:30 }}</p>
+                                </a>
+                            </td>
+
+                            <td>
+                                {% if not post.published_date %}
+                                <a href="{% url 'post_publish' pk=post.pk %}"
+                                    class="btn btn-outline-primary mr-2 float-right" style="border:none;">Publish</a>
+                                {% endif %}
+                            </td>
+                            <td>
+                                <a href="{% url 'post_edit' pk=post.pk %}" class="btn btn-outline-dark float-right"
+                                    style="border:none;"><i class="fa fa-edit"> Edit</i></a>
+                            </td>
+                            <td>
+
+
+                                <a href="{% url 'post_delete' pk=post.pk %}" class="btn btn-outline-danger float-right"
+                                    onclick="return confirm('Are you sure you want to delete this Post ?')"
+                                    style="border:none;">
+                                    <i class="fas fa-trash-alt"> Delete</i>
+                                </a>
+                            </td>
+
+                        </tr>
+                        {% endfor %}
                     </tbody>
-               </div>
+            </div>
             </table>
         </div>
-            {% else %}
-                <div class="text-center text-muted my-4">
-                    <i class="fas fa-sad-tear fa-8x"></i>
-                    <h3>Sorry {{request.user}} you have no posts.</h3>
-                    <a class="btn btn-outline-secondary" href="{% url 'post_new' %}">Add post</a>
-                </div>
-                <hr class="my-4">
-                
+        {% else %}
+        <div class="text-center text-muted my-4">
+            <i class="fas fa-sad-tear fa-8x"></i>
+            <h3>Sorry {{request.user}} you have no posts.</h3>
+            <a class="btn btn-outline-secondary" href="{% url 'post_new' %}">Add post</a>
+        </div>
+        <hr class="my-4">
+
         {% endif %}
     </div>
-</div>  
-    <div class="">
-        
-        <div class="text-center">
-            <img class=" mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-            <h5 >Profile</h3>
-        </div>
-        <hr>
-         <div class=" ">
-        <p>Username: {{user}}</p>
-        <p>Email: {{user.email}}</p>
-        </div> 
-    </div>
+</div>
 {% endblock %}
