--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-  <button class="btn-sm" onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-chevron-up"></i></button>
+  <!-- <button class="btn-sm" onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-chevron-up"></i></button> -->
   {% block mainnav %}
   <!-- Nav bar -->
   <!-- Page Content -->
